Fixed not visible window controls

--- a/Close Only Left/userChrome.css
+++ b/Close Only Left/userChrome.css
@@ -2,24 +2,25 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-/* This userChrome is for button layout Elementary */
+/* This userChrome is for button layout Close left */
 
 @import "base.css";
 
 /****** window controls buttons ******/
 
 .titlebar-buttonbox-container {
-    position: absolute !important;
+    position: relative !important;
 }
 .titlebar-buttonbox {
     appearance: none !important;
     top: -13px !important;
+    margin-right: 40px !important;
     position: absolute !important;
-    flex-direction: row-reverse !important;
+    flex-direction: row !important;
     display: flex !important;
-    width: calc(100vw - 12px) !important;
+    width: 100vw !important;
     height: 25px !important;
-    justify-content: space-between !important;
+    justify-content: start !important;
 }
 
 /* make room for window control buttons */
@@ -31,12 +32,6 @@
     z-index: 2 !important;
 }
 
-/* mirror max and restore button */
-
-.titlebar-max, .titlebar-restore {
-    transform: scaleX(-1) !important;
-}
-
 /* move window control buttons when spacestoolbar is active */
 
 :root[spacestoolbar="true"] .titlebar-buttonbox {
@@ -44,15 +39,9 @@
     top: -13px !important;
     margin-right: 40px !important;
     position: absolute !important;
-    flex-direction: row-reverse !important;
+    flex-direction: row !important;
     display: flex !important;
-    width: calc(100vw - 52px) !important;
+    width: 100vw !important;
     height: 25px !important;
-    justify-content: space-between !important;
-}
-:root[spacestoolbar="true"][uidensity="touch"] .titlebar-close {
-    margin-right: 20px !important;
-}
-:root[spacestoolbar="true"]:not([uidensity="touch"]):not([uidensity="compact"]) .titlebar-close {
-    margin-right: 10px !important;
+    justify-content: start !important;
 }
