--- a/Elementary/userChrome.css
+++ b/Elementary/userChrome.css
@@ -9,7 +9,7 @@
 /****** window controls buttons ******/
 
 .titlebar-buttonbox-container {
-    position: absolute !important;
+    position: relative !important;
 }
 .titlebar-buttonbox {
     appearance: none !important;
@@ -31,12 +31,6 @@
     z-index: 2 !important;
 }
 
-/* mirror max and restore button */
-
-.titlebar-max, .titlebar-restore {
-    transform: scaleX(-1) !important;
-}
-
 /* move window control buttons when spacestoolbar is active */
 
 :root[spacestoolbar="true"] .titlebar-buttonbox {
@@ -46,13 +40,13 @@
     position: absolute !important;
     flex-direction: row !important;
     display: flex !important;
-    width: calc(100vw - 52px) !important;
+    width: calc(100vw - 49px) !important;
     height: 25px !important;
     justify-content: space-between !important;
 }
-:root[spacestoolbar="true"][uidensity="touch"] .titlebar-close {
-    margin-right: 20px !important;
+:root[spacestoolbar="true"][uidensity="touch"] .titlebar-max {
+    margin-right: 18px !important;
 }
-:root[spacestoolbar="true"]:not([uidensity="touch"]):not([uidensity="compact"]) .titlebar-close {
-    margin-right: 10px !important;
+:root[spacestoolbar="true"]:not([uidensity="touch"]):not([uidensity="compact"]) .titlebar-max {
+    margin-right: 8px !important;
 }
