--- a/macOS/userChrome.css
+++ b/macOS/userChrome.css
@@ -9,7 +9,7 @@
 /****** window controls buttons ******/
 
 .titlebar-buttonbox-container {
-    position: absolute !important;
+    position: relative !important;
 }
 .titlebar-buttonbox {
     appearance: none !important;
@@ -19,7 +19,7 @@
     display: flex !important;
     width: 100vw !important;
     height: 25px !important;
-    justify-content: end !important;
+    justify-content: start !important;
 }
 
 /* make room for window control buttons */
@@ -28,13 +28,7 @@
     position: relative !important;
     margin-left: 110px !important;
     margin-right: 0px !important;
-    z-index: 1 !important;
-}
-
-/* mirror max and restore button */
-
-.titlebar-max, .titlebar-restore {
-    transform: scaleX(-1) !important;
+    z-index: 2 !important;
 }
 
 /* move window control buttons when spacestoolbar is active */
@@ -48,24 +42,5 @@
     display: flex !important;
     width: 100vw !important;
     height: 25px !important;
-    justify-content: end !important;
-}
-.titlebar-close {
-    margin-right: 10px !important;
-}
-.titlebar-max,
-.titlebar-restore {
-    margin-right: 35px !important;
-}
-.titlebar-min {
-    margin-right: -63px !important;
-}
-:root[spacestoolbar="true"][uidensity="touch"] .titlebar-close {
-    margin-right: 70px !important;
-}
-:root[spacestoolbar="true"]:not([uidensity="touch"]):not([uidensity="compact"]) .titlebar-close {
-    margin-right: 60px !important;
-}
-:root[spacestoolbar="true"][uidensity="compact"] .titlebar-close {
-    margin-right: 50px !important;
+    justify-content: start !important;
 }
